# galib

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  GA1DArrayGenome_8hpp_source.html  GA1DBinStrGenome_8h_source.html  GA2DArrayGenome_8hpp_source.html  GA2DBinStrGenome_8h_source.html  GA3DArrayGenome_8h_source.html  GA3DBinStrGenome_8h_source.html  GAAllele_8h_source.html  GAArray_8h_source.html  GABaseGA_8h_source.html  GABin2DecGenome_8h_source.html  GABinStr_8hpp_source.html  GADCrowdingGA_8h_source.html  GADemeGA_8h_source.html  GAEvalData_8h_source.html  GAGenome_8h_source.html  GAIncGA_8h_source.html  GAListBASE_8h_source.html  GAListGenome_8hpp_source.html  GAList_8hpp_source.html  GAMask_8h_source.html  GANode_8h_source.html  GAParameter_8h_source.html  GAPopulation_8h_source.html  GARealGenome_8h_source.html  GASStateGA_8h_source.html  GAScaling_8h_source.html  GASelector_8h_source.html  GASimpleGA_8h_source.html  GAStatistics_8h_source.html  GAStringGenome_8h_source.html  GATreeBASE_8h_source.html  GATreeGenome_8hpp_source.html  GATree_8hpp_source.html  LICENSE  README.md  RELEASE-NOTES.md  (+313 more)
.github/workflows/: ci-linux.yml  ci-windows.yml  codacy-analysis.yml  codacy.yml  codeql-analysis.yml  main.yml  main2.yml  msvc.yml
cmake/: CodeCoverage.cmake
doc/: Doxyfile.in  Extensions.md  FeatureList.md  GAlib.md  Overview.md
examples/: CMakeLists.txt  README.md  ex1.C  ex1.hpp  ex10.C  ex10.hpp  ex11.C  ex11.hpp  ex12.C  ex12.hpp  ex13.C  ex13.hpp  ex14.C  ex14.hpp  ex15.C  ex15.hpp  ex16.C  ex16.hpp  ex17.C  ex17.hpp  ex18.C  ex18.hpp  ex19.C  ex19.hpp  ex2.C  ex2.hpp  ex20.C  ex20.hpp  ex21.C  ex21.hpp  ex22.C  ex22.hpp  ex23.C  ex23.hpp  ex24.C  ex24.hpp  ex25.C  ex25.hpp  ex26.C  ex26.hpp  (+17 more)
examples/gnu/: AllocRing.cc  BitString.cc  BitString.h  Obstack.cc  Obstack.h  README.md  bitdo1.h  bitdo2.h  bitstr.C  bitstr.h  builtin.h  gnuex.C
examples/graphic/: gaview.C  tspview.C
examples/pvmind/: README.md  genome.C  genome.h  master.C  slave.C
examples/pvmpop/: PVMDemeGA.C  PVMDemeGA.h  README.md  genome.C  genome.h  master.C  slave.C
ga/: CMakeLists.txt  ChangeLog.md  GA1DArrayGenome.C  GA1DArrayGenome.h  GA1DArrayGenome.hpp  GA1DBinStrGenome.C  GA1DBinStrGenome.h  GA2DArrayGenome.C  GA2DArrayGenome.h  GA2DArrayGenome.hpp  GA2DBinStrGenome.C  GA2DBinStrGenome.h  GA3DArrayGenome.C  GA3DArrayGenome.h  GA3DBinStrGenome.C  GA3DBinStrGenome.h  GAAllele.C  GAAllele.h  GAArray.h  GABaseGA.C  GABaseGA.h  GABin2DecGenome.C  GABin2DecGenome.h  GABinStr.C  GABinStr.h  GABinStr.hpp  GADCrowdingGA.C  GADCrowdingGA.h  GADemeGA.C  GADemeGA.h  GAEvalData.h  GAGenome.C  GAGenome.cxx  GAGenome.h  GAIncGA.C  GAIncGA.h  GAList.C  GAList.h  GAList.hpp  GAListBASE.C  (+45 more)
search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  pages_0.js  pages_1.js  pages_2.js  pages_3.js  pages_4.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  (+4 more)
test/: CMakeLists.txt  GAArrayTest.cpp  GABinStrTest.cpp  GAExamplesTest.cpp  GAListGenomeTest.cpp  GAListTest.cpp  GAMaskTest.cpp  GAParameterTest.cpp  GARandTest.cpp  GASStateGATest.cpp  GASimpleGATest.cpp  main.cpp
